# CitadelTerminal

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_AND_README_PROMPT.md  M1LITE_VARIANTS_FINAL_REPORT.md  ORACLE_SUCCESSOR_PROMPT.md  README.md  Research Report.md  requirements.txt
.claude/: settings.json
.codex/: config.toml
Ranked Replays/: ORACLE_REPLAYS.md  ORACLE_REPLAYS_MANIFEST.json
algos/athena/sim_rs/: Cargo.toml  README.md  pyproject.toml
algos/athena/sim_rs/.cargo/: config.toml
algos/athena/sim_rs/benches/: action_phase.rs  throughput.rs
algos/athena/sim_rs/examples/: attack_internal_prof.rs  attack_phase_prof.rs  attack_split_prof.rs  attackprof.rs  cache_stats.rs  fire_segment_prof.rs  moveprof.rs  parallel_bench.rs  per_system_prof.rs  pfprof.rs  profile.rs  quickbench.rs  rebuild_prof.rs  simprof.rs
algos/athena/sim_rs/fixtures/: mid_game_turn.json
algos/athena/sim_rs/src/: config.rs  events.rs  lib.rs  map.rs  pathfinder.rs  proximity.rs  sim.rs  state.rs  systems.rs
algos/athena/sim_rs/tests/: events_parity.rs  frame_loop_parity.rs  pathfinder_parity.rs  proximity_parity.rs  state_tests.rs
athena_v_resilient/: algo.json  algo_strategy.py
athena_v_supports/: algo.json
configs/: competition-game-configs.json
data/: CITADEL_LEADERBOARD.md  IS6_smart_compatibility.md  citadel_leaderboard_algo.json  citadel_leaderboard_team.json  citadel_leaderboard_team_corrected.json  citadel_leaderboard_team_peak.json  citadel_matches.json  citadel_roster.json  citadel_teams.json  harvest_manifest.json  harvest_matches.json  oracle_full_pairwise_analysis.md  smart_oracle_vd_common_opp_analysis.md
docs/: ADVANCED_STRATEGIES_PROMPT.md  ATHENA_BUILD_PLAN.md  BACKTEST_CONTEXT.md  BASELINE_BUILDING_PROMPT.md  CLAUDE_WORKFLOW.md  CONFIG_PATCH_PROMPT.md  CONTINUATION_PROMPT.md  FOLLOWUP_TRACKS_PROMPT.md  GAME_RULES.md  ITERATION_HISTORY_V1_V11.md  MAP_AND_COORDINATES.md  PROMPTS.md  REPLAY_ANALYSIS_2026-04-23_v12.md  STRATEGY_GUIDE.md  TARGETING_AND_PATHING.md  UNITS_REFERENCE.md
gamelib_ext/: __init__.py  classifier.py  plans.py  simulator.py  spawn_predictor.py
heuristic_v2_upload/: algo.json  algo_strategy.py
oracle_pure_M1Lite_IS4_upload/: VARIANT_IS4_REPORT.md  algo_strategy.py
oracle_pure_M1Lite_IS5_upload/: VARIANT_IS5_REPORT.md
oracle_pure_M1Lite_IS6_upload/: VARIANT_F_REPORT.md
oracle_pure_M1Lite_J1_upload/: VARIANT_J1_REPORT.md  algo_strategy.py
oracle_pure_M1Lite_J2_upload/: VARIANT_J2_REPORT.md
oracle_pure_M1Lite_J3_upload/: VARIANT_D_REPORT.md  VARIANT_J3_REPORT.md  algo_strategy.py  run_validation.sh  validation_results.txt
oracle_pure_M1Lite_J4_upload/: VARIANT_J4_REPORT.md  algo_strategy.py
oracle_pure_M1Lite_K1_upload/: VARIANT_K1_REPORT.md
oracle_pure_M1Lite_K2_upload/: REVISED_IMPROVEMENT_PLAN.md  VARIANT_K2_REPORT.md
oracle_pure_M1Lite_M2v2_upload/: VARIANT_M2_REPORT.md
oracle_pure_M1Lite_M2v3_upload/: algo.json  algo_strategy.py
oracle_pure_M1Lite_M2v4_upload/: run.sh
oracle_pure_M1Lite_VA_upload/: VARIANT_A_REPORT.md
oracle_pure_M1Lite_VB_upload/: M1_LITE_SHIP_AND_G3_INVESTIGATE.md  VARIANT_B_REPORT.md
oracle_pure_M1Lite_VC_upload/: VARIANT_C_REPORT.md  algo.json
oracle_pure_M1Lite_VE_upload/: VARIANT_E_REPORT.md  algo.json
oracle_pure_M1Lite_upload/: algo_strategy.py
oracle_pure_upload/: CONTEXT_HANDOFF.md  CRITICAL_EVAL_v3.md  IMPROVEMENT_PLAN_v3.md  M2_IMPLEMENTATION_PROMPT.md  MILESTONE_PROMPTS.md  PATH_VIABILITY_PLAN.md
oracle_upload/: algo_strategy.py
replays/: final_v11_vs_1841_elo_loss.replay  v12_sidelane_spend_vs_1783_elo_loss.replay  v12_sidelane_spend_vs_1805_elo_loss.replay
research/: A3_EVIDENCE.md  AUDIT_2026-04-24.md
smart_oracle_F2_upload/: VARIANT_SMART_ORACLE_F2_REPORT.md  algo.json
smart_oracle_F_upload/: FINAL_CRITICAL_EVAL.md  FUNNEL_COUNTER_PLAN.md  VARIANT_IS6_REPORT.md  VARIANT_SMART_ORACLE_F_REPORT.md  algo.json  algo_strategy.py  (+1 more)
(+7230 files in other folders)
