[package]
name = "sim_rs"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Taha"]
description = "Bit-exact Rust port of SimCore (Citadel Terminal action-phase simulator)"

[lib]
name = "sim_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2"
bumpalo  = "3"
pyo3     = { version = "0.21", features = ["extension-module"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "action_phase"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
