[package]
name = "sim_rs"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Taha"]
description = "Bit-exact Rust port of SimCore (Citadel Terminal action-phase simulator)"

[lib]
name = "sim_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# pyo3 extension-module bindings. Opt-in so `cargo build` / `cargo test` work
# without a matching Python version. Build the PyO3 extension with:
#   cargo build --release --features pyo3
pyo3 = ["dep:pyo3"]

[dependencies]
indexmap = "2"
bumpalo  = "3"
pyo3     = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[[bench]]
name = "action_phase"
harness = false

[[bench]]
name = "throughput"
harness = false
